tests/ui/invalid-compile-flags/print-file-names-request-malformed-crate-name-3.rs
//@check-pass
//@ compile-flags: --print=file-names

#[crate_name = concat!("wrapped")]

macro_rules! inline {
    () => {};
}
